<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLanguageChange"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/robotobold"
        android:includeFontPadding="false"
        android:text="@string/change_language"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddURL"
        app:layout_constraintTop_toTopOf="@id/imageAddURL"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp" />

        <RadioButton
            android:id="@+id/turkish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turkish"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            android:checked="false"/>

    </RadioGroup>


    <TextView
        android:id="@+id/textCancelLNG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/robotomedium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_dialog"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textApply"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

    <TextView
        android:id="@+id/textApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/robotomedium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/apply"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>



</androidx.constraintlayout.widget.ConstraintLayout>