<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/black_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/register"
                android:fontFamily="@font/robotobold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>

            <ImageView
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="93dp"
                android:src="@drawable/logo"/>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/password"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/signUpTV"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_fill__rounded_color"
            android:fontFamily="@font/robotomedium"
            android:layout_gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="12sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>