<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/black_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/login"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

            <ImageView
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="93dp"
                android:src="@drawable/logo"/>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/password"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/loginTV"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/forgotTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="#202124"
            android:textSize="10.5sp" />

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/you_don_t_have_an_account_register"
            android:textSize="10.5sp"
            android:textColor="#202124"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13.7dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="or"
                android:textColor="#aeaeae"
                android:textSize="13.3sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebookIV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/fb"/>

            <ImageView
                android:id="@+id/microsoftIV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/microsoft"/>

            <ImageView
                android:id="@+id/twitterIV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/twitter"/>

            <ImageView
                android:id="@+id/googleIV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/google"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>