<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileActivity"
    android:fillViewport="true"
    android:background="@color/colorQuickActionsBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/background_profile">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_profile"
                app:civ_border_color="#000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/imageEditBTN"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="19dp"
                android:background="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintHorizontal_bias="0.644"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="164dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="164dp"
                android:layout_marginBottom="14dp"
                android:text="Name"
                android:textColor="#fff"
                android:textSize="18sp"
                android:fontFamily="@font/robotomedium"
                app:layout_constraintBottom_toTopOf="@+id/emailTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="138dp"
                android:layout_marginEnd="139dp"
                android:text="test@gmail.com"
                android:textColor="#fff"
                android:textSize="15sp"
                android:fontFamily="@font/robotoregular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTV"
                app:layout_constraintVertical_bias="0.555" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_below="@+id/consLayout"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:fontFamily="@font/robotoregular"
                android:padding="8dp"
                android:id="@+id/language"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:background="#848484"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/logout"
                android:padding="8dp"
                android:id="@+id/logoutTV"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/updateBTN"
            android:textColor="#fff"
            android:background="@drawable/background_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/robotomedium"
            android:layout_margin="22sp"
            android:visibility="gone"
            android:minWidth="150dp"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/robotoregular"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/_5sdp"/>

    </RelativeLayout>

</ScrollView>